@@ -75,10 +75,6 @@
 #include "s3m.h"
 #include "period.h"
 
-#ifndef LIBXMP_CORE_PLAYER
-#include "synth.h"
-#endif
-
 #define MAGIC_SCRM	MAGIC4('S','C','R','M')
 #define MAGIC_SCRI	MAGIC4('S','C','R','I')
 #define MAGIC_SCRS	MAGIC4('S','C','R','S')
@@ -649,9 +645,6 @@ static int s3m_load(struct module_data *m, HIO_HANDLE * f, const int start)
 	free(pp_pat);
 	free(pp_ins);
 
-#ifndef LIBXMP_CORE_PLAYER
-	m->synth = &synth_adlib;
-#endif
 	m->quirk |= QUIRKS_ST3 | QUIRK_ARPMEM;
 	m->read_event_type = READ_EVENT_ST3;
 
